--- a/SITE k g/views/index.html
+++ b/SITE k g/views/index.html
@@ -1,18 +1,18 @@
 <html>
     <head>
         <title>Magazine Luzia</title>
-        <link href=".../models/estilo.css" rel="stylesheet" type="text/css"/>
+        <link href="../models/estilo.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         
         <header>
-            <h1><center>Magazine Luzia</center></h1>
+            <h1>Magazine Luzia</h1>
         </header>
         <nav>
-         <a href="Atendimento.html">Atendimento</a><br>
-        <a href="Meus pedidos.html">Meus pedidos</a><br>
-        <a href="Produtos em oferta.html">Produtos em oferta</a>
-    </nav>
+            <a href="Atendimento.html">Atendimento</a><br>
+            <a href="Meus pedidos.html">Meus pedidos</a><br>
+            <a href="Produtos em oferta.html">Produtos em oferta</a>
+        </nav>
     <h1></h1>
     <footer>
 
