--- a/SITE k g/views/index.html
+++ b/SITE k g/views/index.html
@@ -7,18 +7,19 @@
         
         <header>
             <h1>Magazine Luzia</h1>
+            <img src="../models/will.png" class="will">
         </header>
         <nav>
-            <a href="Atendimento.html">Atendimento</a><br>
-            <a href="Meus pedidos.html">Meus pedidos</a><br>
-            <a href="Produtos em oferta.html">Produtos em oferta</a>
+
+            <a href="Atendimento.html" class="texto">Atendimento</a>
+            <a href="Meus pedidos.html" class="texto">Meus pedidos</a>
+            <a href="Produtos em oferta.html" class="texto">Produtos em oferta</a>
+            <a href="entre.html" class="texto">entre em contato conosco</a>
         </nav>
-    <h1></h1>
+        <main>
+            <h1 class="Produtos">Produtos</h1>
+        </main>
     <footer>
-
-
-        <p> Fale Cu Nois </p>
-
     </footer>
     </body>
 </html>
