--- a/SITE k g/views/index.html
+++ b/SITE k g/views/index.html
@@ -1,12 +1,17 @@
 <html>
     <head>
-        <title>Magazine Luzia</title>
+        <title>Valvet Darkness</title>
         <link href="../models/estilo.css" rel="stylesheet" type="text/css">
+        <link rel="icon" href="../models/images.png" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     </head>
     <body>
         
         <header>
-            <h1>Magazine Luzia</h1>
+            <h1>Velvet Darkness  </h1>
             <img src="../models/will.png" class="will">
         </header>
         <nav>
@@ -18,8 +23,33 @@
         </nav>
         <main>
             <h1 class="Produtos">Produtos</h1>
+            <div class="produtos-container">
+                <div class="produto">
+                    <img src="https://hinodegroup.vtexassets.com/arquivos/ids/158790-800-auto?v=638029276002670000&width=800&height=auto&aspect=true" alt="Produto 1">
+                    <h1>Batom liquido matte</h1>
+                </div>
+                <div class="produto">
+                    <img src="https://hinodegroup.vtexassets.com/arquivos/ids/158425-800-auto?v=637684466904930000&width=800&height=auto&aspect=true" alt="Produto 2">
+                    <h1>Blush em Pó Velvet</h1>
+                </div>
+                <div class="produto">
+                    <img src="https://fandcosmeticos.com.br/painel/assets/upload_produto/p_15/xx_base-liquida-matte-fand-30g-2b4916ad2c275b9985ae63f687abf417.png" alt="Produto 3">
+                    <h1>Base cobertura glow</h1>
+                </div>
+                <div class="produto">
+                    <img src="https://res.cloudinary.com/beleza-na-web/image/upload/w_1500,f_auto,fl_progressive,q_auto:eco,w_1800,c_limit/e_trim/v1/imagens/product/63569/76822de4-9655-4afa-bf27-f567d0fbf72b-tracta-duo-sombra-para-sobrancelha-4g.png" alt="Produto 4">
+                    <h1>Sombra duo color</h1>
+                </div>
+            </div>
         </main>
-    <footer>
-    </footer>
+        <footer>
+            <div class="footer-content">
+                <p>&copy; 2025 Velvet Darkness - Todos os direitos reservados.</p>
+                <p>Siga-nos nas redes sociais:</p>
+                <a href="https://www.instagram.com" target="_blank">Instagram</a>
+                <a href="https://www.facebook.com" target="_blank">Facebook</a>
+                <a href="https://www.twitter.com" target="_blank">Twitter</a>
+            </div>
+        </footer>
     </body>
 </html>
