--- a/SITE k g/views/index.html
+++ b/SITE k g/views/index.html
@@ -25,20 +25,20 @@
             <h1 class="Produtos">Produtos</h1>
             <div class="produtos-container">
                 <div class="produto">
-                    <img src="https://hinodegroup.vtexassets.com/arquivos/ids/158790-800-auto?v=638029276002670000&width=800&height=auto&aspect=true" alt="Produto 1">
-                    <h1>Batom liquido matte</h1>
+                    <a href="batom.html"><img src="https://hinodegroup.vtexassets.com/arquivos/ids/158790-800-auto?v=638029276002670000&width=800&height=auto&aspect=true" alt="Produto 1" class="foto">
+                    <h1 class="textos">Batom liquido matte</h1></a>
                 </div>
                 <div class="produto">
-                    <img src="https://hinodegroup.vtexassets.com/arquivos/ids/158425-800-auto?v=637684466904930000&width=800&height=auto&aspect=true" alt="Produto 2">
-                    <h1>Blush em Pó Velvet</h1>
+                    <a href="blush.html"><img src="https://hinodegroup.vtexassets.com/arquivos/ids/158425-800-auto?v=637684466904930000&width=800&height=auto&aspect=true" alt="Produto 2" class="foto">
+                    <h1 class="textos">Blush em Pó Velvet</h1></a>
                 </div>
                 <div class="produto">
-                    <img src="https://fandcosmeticos.com.br/painel/assets/upload_produto/p_15/xx_base-liquida-matte-fand-30g-2b4916ad2c275b9985ae63f687abf417.png" alt="Produto 3">
-                    <h1>Base cobertura glow</h1>
+                    <a href="Base.html"><img src="https://hinodegroup.vtexassets.com/arquivos/ids/158910/25386---DAZZLE-BASE-MATTE-VELVET-MEeDIO-1.png?v=638145914860070000" alt="Produto 3" class="foto">
+                    <h1 class="textos">Base cobertura glow</h1></a>
                 </div>
                 <div class="produto">
-                    <img src="https://res.cloudinary.com/beleza-na-web/image/upload/w_1500,f_auto,fl_progressive,q_auto:eco,w_1800,c_limit/e_trim/v1/imagens/product/63569/76822de4-9655-4afa-bf27-f567d0fbf72b-tracta-duo-sombra-para-sobrancelha-4g.png" alt="Produto 4">
-                    <h1>Sombra duo color</h1>
+                    <a href="sombra.html"><img src="https://res.cloudinary.com/beleza-na-web/image/upload/w_1500,f_auto,fl_progressive,q_auto:eco,w_1800,c_limit/e_trim/v1/imagens/product/63569/76822de4-9655-4afa-bf27-f567d0fbf72b-tracta-duo-sombra-para-sobrancelha-4g.png" alt="Produto 4" class="foto">
+                    <h1 class="textos">Sombra duo color</h1></a>
                 </div>
             </div>
         </main>
