--- a/SITE k g/views/Atendimento.html
+++ b/SITE k g/views/Atendimento.html
@@ -1,16 +1,55 @@
 <html>
     <head>
-        <title>Atendimento</title>
+        <title>Valvet Darkness</title>
+        <link href="../models/atendimento.css" rel="stylesheet" type="text/css">
+        <link rel="icon" href="../models/images.png" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     </head>
     <body>
+        
         <header>
-
+            <h1>Velvet Darkness  </h1>
+            <a href="index.html"><img src="../models/will.png" class="will"></a>
         </header>
-        <main>
+        <nav>
 
+            <a href="Atendimento.html" class="texto">Atendimento</a>
+            <a href="Meus pedidos.html" class="texto">Meus pedidos</a>
+            <a href="Produtos em oferta.html" class="texto">Produtos em oferta</a>
+            <a href="entre.html" class="texto">entre em contato conosco</a>
+        </nav>
+        <main>
+            <h1 class="Produtos">Atendimentos</h1>
+            <div class="produtos-container">
+                <div class="produto">
+                    <a href="https://www.instagram.com"><img src="https://static.vecteezy.com/system/resources/thumbnails/053/337/785/small/instagram-icon-variations-free-png.png" alt="Produto 1" class="foto">
+                    <h1 class="textos">Instagram</h1></a>
+                </div>
+                <div class="produto">
+                    <a href="https://www.facebook.com"><img src="https://cdn-icons-png.flaticon.com/512/20/20673.png" alt="Produto 2" class="foto">
+                    <h1 class="textos">Facebook</h1></a>
+                </div>
+                <div class="produto">
+                    <a href="https://www.twitter.com"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjRvA_H7TNY7LBdyihu9M9iKqecIqyf5uqf-r5lZb4iyR2qljPGXRztAnFylsRJ-ibJ4A&usqp=CAU" alt="Produto 3" class="foto">
+                    <h1 class="textos">Twitter</h1></a>
+                </div>
+                <div class="produto">
+                    <a href="sombra.html"><img src="https://res.cloudinary.com/beleza-na-web/image/upload/w_1500,f_auto,fl_progressive,q_auto:eco,w_1800,c_limit/e_trim/v1/imagens/product/63569/76822de4-9655-4afa-bf27-f567d0fbf72b-tracta-duo-sombra-para-sobrancelha-4g.png" alt="Produto 4" class="foto">
+                    <h1 class="textos">Sombra duo color</h1></a>
+                </div>
+            </div> 
         </main>
         <footer>
-
+            <div class="footer-content">
+                <p>&copy; 2025 Velvet Darkness - Todos os direitos reservados.</p>
+                <p>Siga-nos nas redes sociais:</p>
+                <a href="https://www.instagram.com" target="_blank">Instagram</a>
+                <a href="https://www.facebook.com" target="_blank">Facebook</a>
+                <a href="https://www.twitter.com" target="_blank">Twitter</a>
+            </div>
         </footer>
     </body>
 </html>
