--- a/SITE k g/views/index.html
+++ b/SITE k g/views/index.html
@@ -12,7 +12,7 @@
         
         <header>
             <h1>Velvet Darkness  </h1>
-            <img src="../models/will.png" class="will">
+            <a href="index.html"><img src="../models/will.png" class="will"></a>
         </header>
         <nav>
 
