--- a/SITE k g/models/atendimento.css
+++ b/SITE k g/models/atendimento.css
@@ -29,9 +29,41 @@ header {
     border: 10px solid rgb(0, 0, 0);
     border-radius: 20px;
 }
+body {
+    background-color: rgb(134, 5, 5);
+    color: rgb(0, 0, 0);
+}
+.will {
+    position: absolute;
+    top: 22;
+    left: 40;
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+}
+header {
+    background-color: rgb(0, 0, 0);
+    color: rgba(245, 245, 245, 0.699);
+    font-size: 40px;
+    text-align: center;
+    border-radius: 0 0 60px 60px;
+}
+.texto {
+    margin-left: 19em;
+    color: white;
+    width: 60%;
+    top: auto;
+    left: 28%;
+}
+.texto:hover {
+    background-color: rgba(0, 0, 0, 0.658);
+    border: 10px solid rgb(0, 0, 0);
+    border-radius: 20px;
+}
 main {
     background-color: rgba(170, 170, 170, 0.274);
     flex: 1;
+    color: white;
 }
 .produtos {
         text-align: center;
@@ -48,6 +80,7 @@ main {
     justify-content: space-around;
     flex-wrap: wrap;
     margin: 70px 0;
+    color: white;
     
 }
 .produto {
@@ -60,6 +93,7 @@ main {
 .produto:hover {
     background-color: rgba(255, 84, 84, 0.541);
     border-radius: 10px;
+
 }
 
 .produto img {
@@ -91,7 +125,3 @@ main {
     width: 99%;
     border-radius: 30px 30px 0 0;
 }
-.footer-content a {
-    color: white;
-}
-
